// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PathForm component 1`] = `
<div
  className="filters"
>
  <div
    className="form-group"
  >
    <label>
      Starting location
    </label>
    <div>
      <input
        autoComplete="off"
        className="form-control search react-mapbox-ac-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      
      <span>
        <div
          className="react-mapbox-ac-menu"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
      </span>
    </div>
  </div>
  <div
    className="form-group last-control"
  >
    <label>
      Drop-off location
    </label>
    <div>
      <input
        autoComplete="off"
        className="form-control search react-mapbox-ac-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      
      <span>
        <div
          className="react-mapbox-ac-menu"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
      </span>
    </div>
  </div>
  
  
  <div
    className="buttons"
  >
    <button
      className="btn btn-primary"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
    <button
      className="btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`renders Pthform component with loading property 1`] = `
<div
  className="filters"
>
  <div
    className="form-group"
  >
    <label>
      Starting location
    </label>
    <div>
      <input
        autoComplete="off"
        className="form-control search react-mapbox-ac-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      
      <span>
        <div
          className="react-mapbox-ac-menu"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
      </span>
    </div>
  </div>
  <div
    className="form-group last-control"
  >
    <label>
      Drop-off location
    </label>
    <div>
      <input
        autoComplete="off"
        className="form-control search react-mapbox-ac-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      
      <span>
        <div
          className="react-mapbox-ac-menu"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
      </span>
    </div>
  </div>
  
  
  <div
    className="buttons"
  >
    <button
      className="btn btn-primary"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Loading
    </button>
    <button
      className="btn btn-secondary"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Reset
    </button>
  </div>
</div>
`;
